@@ -62,12 +62,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 import static io.ballerina.cli.launcher.LauncherUtils.createLauncherException;
 import static org.ballerinalang.test.runtime.util.TesterinaConstants.COVERAGE_DIR;
@@ -90,7 +90,10 @@ import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.USER_DIR;
  *
  * @since 2.3.0
  */
-public class TestUtils {
+public final class TestUtils {
+
+    private TestUtils() {
+    }
 
     public static void generateCoverage(Project project, TestReport testReport, JBallerinaBackend jBallerinaBackend,
                                         String includesInCoverage, String coverageReportFormat,
@@ -106,11 +109,11 @@ public class TestUtils {
 
         Map<String, ModuleCoverage> moduleCoverageMap = initializeCoverageMap(project);
         // Following lists will hold the coverage information needed for the coverage XML file generation.
-        List<ISourceFileCoverage> packageSourceCoverageList = new ArrayList();
-        List<IClassCoverage> packageNativeClassCoverageList = new ArrayList();
-        List<IClassCoverage> packageBalClassCoverageList = new ArrayList();
-        List<ExecutionData> packageExecData = new ArrayList();
-        List<SessionInfo> packageSessionInfo = new ArrayList();
+        List<ISourceFileCoverage> packageSourceCoverageList = new ArrayList<>();
+        List<IClassCoverage> packageNativeClassCoverageList = new ArrayList<>();
+        List<IClassCoverage> packageBalClassCoverageList = new ArrayList<>();
+        List<ExecutionData> packageExecData = new ArrayList<>();
+        List<SessionInfo> packageSessionInfo = new ArrayList<>();
         for (ModuleId moduleId : project.currentPackage().moduleIds()) {
             Module module = project.currentPackage().module(moduleId);
             CoverageReport coverageReport = new CoverageReport(module, moduleCoverageMap,
@@ -120,9 +123,9 @@ public class TestUtils {
                     coverageModules.get(module.moduleName().toString()), exclusionClassList);
         }
         // Traverse coverage map and add module wise coverage to test report
-        for (Map.Entry mapElement : moduleCoverageMap.entrySet()) {
-            String moduleName = (String) mapElement.getKey();
-            ModuleCoverage moduleCoverage = (ModuleCoverage) mapElement.getValue();
+        for (Map.Entry<String, ModuleCoverage> mapElement : moduleCoverageMap.entrySet()) {
+            String moduleName = mapElement.getKey();
+            ModuleCoverage moduleCoverage = mapElement.getValue();
             testReport.addCoverage(moduleName, moduleCoverage);
         }
         if (CodeCoverageUtils.isRequestedReportFormat(coverageReportFormat,
@@ -479,11 +482,10 @@ public class TestUtils {
      */
     public static String getClassPath(JBallerinaBackend jBallerinaBackend, Package currentPackage) {
         JarResolver jarResolver = jBallerinaBackend.jarResolver();
+        Set<Path> jars = new HashSet<>(getModuleJarPaths(jBallerinaBackend, currentPackage));
 
-        List<Path> dependencies = getTestDependencyPaths(currentPackage, jarResolver);
-
-        List<Path> jarList = getModuleJarPaths(jBallerinaBackend, currentPackage);
-        dependencies.removeAll(jarList);
+        List<Path> dependencies = getTestDependencyPaths(currentPackage, jarResolver)
+                .stream().filter(dependency -> !jars.contains(dependency)).toList();
 
         StringJoiner classPath = joinClassPaths(dependencies);
         return classPath.toString();
@@ -519,7 +521,7 @@ public class TestUtils {
                 }
             }
         }
-        return dependencies.stream().distinct().collect(Collectors.toList());
+        return dependencies.stream().distinct().toList();
     }
 
     /**
@@ -546,7 +548,7 @@ public class TestUtils {
             }
         }
 
-        return moduleJarPaths.stream().distinct().collect(Collectors.toList());
+        return moduleJarPaths.stream().distinct().toList();
     }
 
     private static PlatformLibrary getCodeGeneratedTestLibrary(JBallerinaBackend jBallerinaBackend,
