@@ -41,7 +41,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Manages interaction with completion providers via compiler plugins.
@@ -54,11 +53,13 @@ public class CompletionManager {
     private CompletionManager(List<CompilerPluginContextIml> compilerPluginContexts) {
         completionProviders = new HashMap<>();
         compilerPluginContexts.forEach(compilerPluginContextIml -> {
-            for (CompletionProvider<Node> completionProvider : compilerPluginContextIml.completionProviders()) {
+            for (CompletionProvider<? extends Node> completionProvider :
+                    compilerPluginContextIml.completionProviders()) {
                 for (Class<?> attachmentPoint : completionProvider.getSupportedNodes()) {
                     List<CompletionProviderDescriptor> completionProviderList =
                             completionProviders.computeIfAbsent(attachmentPoint, k -> new ArrayList<>());
-                    completionProviderList.add(new CompletionProviderDescriptor(completionProvider,
+                    completionProviderList.add(new CompletionProviderDescriptor(
+                            (CompletionProvider<Node>) completionProvider,
                             compilerPluginContextIml.compilerPluginInfo()));
                 }
             }
@@ -159,7 +160,7 @@ public class CompletionManager {
                     }
                     return Optional.of(listenerType);
                 }).filter(listenerType -> listenerType.isPresent() && listenerType.get().getModule().isPresent())
-                .map(listenerType -> listenerType.get().getModule().get()).collect(Collectors.toList());
+                .map(listenerType -> listenerType.get().getModule().get()).toList();
     }
 
     private TypeSymbol getRawType(TypeSymbol typeDescriptor) {
@@ -204,7 +205,7 @@ public class CompletionManager {
         private final CompletionProvider<Node> completionProvider;
         private final CompilerPluginInfo compilerPluginInfo;
 
-        public CompletionProviderDescriptor(CompletionProvider completionProvider,
+        public CompletionProviderDescriptor(CompletionProvider<Node> completionProvider,
                                             CompilerPluginInfo compilerPluginInfo) {
             this.completionProvider = completionProvider;
             this.compilerPluginInfo = compilerPluginInfo;
