@@ -41,12 +41,11 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Common utility methods for the completion operation.
  */
-public class CompletionUtil {
+public final class CompletionUtil {
 
     private CompletionUtil() {
     }
@@ -86,7 +85,7 @@ public class CompletionUtil {
 
         return items.stream()
                 .map(LSCompletionItem::getCompletionItem)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
