@@ -28,7 +28,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static io.ballerina.toml.internal.syntax.SyntaxUtils.isSTNodePresent;
@@ -70,7 +69,7 @@ public abstract class NonTerminalNode extends Node {
                 IntStream.range(0, bucketCount())
                         .filter(bucket -> childInBucket(bucket) != null)
                         .mapToObj(bucket -> new ChildNodeEntry(childNames[bucket], childInBucket(bucket)))
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     @Override
@@ -91,8 +90,7 @@ public abstract class NonTerminalNode extends Node {
         // If that is the case, return the eof token.
         // Fixes 24905
         if (textRangeWithMinutiae.endOffset() == position &&
-                this instanceof DocumentNode) {
-            DocumentNode modulePartNode = (DocumentNode) this;
+                this instanceof DocumentNode modulePartNode) {
             return modulePartNode.eofToken();
         }
 
